<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.machine_logbook.MachineLogbookFragment">

    <Button
        android:id="@+id/button_machine_main_engine_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_engine_1"
        app:layout_constraintBottom_toTopOf="@+id/button_machine_main_engine_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_machine_main_engine_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_engine_2"
        app:layout_constraintBottom_toTopOf="@+id/button_machine_disel_generator_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_machine_disel_generator_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/disel_generator_1"
        app:layout_constraintBottom_toTopOf="@+id/button_machine_disel_generator_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_machine_disel_generator_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/disel_generator_2"
        app:layout_constraintBottom_toTopOf="@+id/button_machine_boiler_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_machine_boiler_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boiler_1"
        app:layout_constraintBottom_toTopOf="@+id/button_machine_utp_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_machine_utp_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="216dp"
        android:text="@string/utp_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>