<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_main_logbook">

    <fragment
        android:id="@+id/navigation_main_logbook"
        android:name="dsp_club.technodar_sel.ui.main_logbook.MainLogbookFragment"
        android:label="@string/title_main_logbook"
        tools:layout="@layout/fragment_main_logbook" />

    <fragment
        android:id="@+id/navigation_ships_logbook"
        android:name="dsp_club.technodar_sel.ui.ships_logbook.ShipsLogbookFragment"
        android:label="@string/title_ships_logbook"
        tools:layout="@layout/fragment_ships_logbook" />

    <fragment
        android:id="@+id/navigation_machine_logbook"
        android:name="dsp_club.technodar_sel.ui.machine_logbook.MachineLogbookFragment"
        android:label="@string/title_machine_logbook"
        tools:layout="@layout/fragment_machine_logbook" />
</navigation>