<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main_logbook.MainLogbookFragment">

    <Button
        android:id="@+id/button_main_regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/regular"
        app:layout_constraintBottom_toTopOf="@+id/button_main_irregular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/button_main_irregular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/irregular"
        app:layout_constraintBottom_toTopOf="@+id/button_main_add_event"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_main_regular" />

    <Button
        android:id="@+id/button_main_add_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_event"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_main_irregular" />

    <Button
        android:id="@+id/button_main_view_calendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_calendar"
        app:layout_constraintBottom_toTopOf="@+id/button_main_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>